Fix showing descendent elements beyond the borders of the li parent
Now a possible element overflow is hidden on the link element, not the
li element.
Without this, a child element (from a sub-list) would be invisible if
dragged outside of the li element.

--- a/skins/elastic/styles/widgets/lists.less
+++ b/skins/elastic/styles/widgets/lists.less
@@ -151,10 +151,13 @@ ul.listing {
     }
 
     li {
-        .overflow-ellipsis();
         white-space: nowrap;
         position: relative;
         list-style: none;
+
+        a {
+            .overflow-ellipsis();
+        }
 
         ul {
             min-height: 1.5rem;
